[package]
name = "win_o_move"
version = "1.0.1"
edition = "2021"
description = "Move windows between monitors with Win+Shift+Arrow keys"
authors = ["Harveyhase68"]
license = "MIT"
repository = "https://github.com/Harveyhase68/win_o_move"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Security",
] }
tray-icon = "0.19"

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = "z"
lto = true
strip = true
